--- a/site/private/components/essential/rb.html
+++ b/site/private/components/essential/rb.html
@@ -1,4 +1,4 @@
-<div class="component ringSchedule">
+<div class="ringSchedule">
     <div class="ringPartContainer">
         <div class="ringPartHeader">ПН - ПТ</div>
         <div class="ringPartGrid">
