--- a/site/private/components/essential/rb.html
+++ b/site/private/components/essential/rb.html
@@ -1,6 +1,6 @@
 <div class="ringSchedule">
     <div class="ringPartContainer">
-        <div class="ringPartHeader">ПН - ПТ</div>
+        <div class="ringPartHeader">ПН - ПТ, 1 смена</div>
         <div class="ringPartGrid">
             <div class="ringBox">
                 <div class="ringCounter">1</div>
@@ -36,21 +36,43 @@
                     <span>14:55 - 15:40</span>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="ringPartContainer">
+        <div class="ringPartHeader">ПН - ПТ, 2 смена</div>
+        <div class="ringPartGrid">
             <div class="ringBox">
-                <div class="ringCounter">5</div>
+                <div class="ringCounter">1</div>
                 <div class="ringTime">
-                    <span>15:50 - 16:35</span>
-                    <span>16:40 - 17:25</span>
+                    <span>12:20 - 13:05</span>
+                    <span>13:10 - 13:55</span>
                 </div>
             </div>
             <div class="ringBox">
-                <div class="ringCounter">6</div>
+                <div class="ringCounter">2</div>
                 <div class="ringTime">
-                    <span>17:35 - 18:20</span>
-                    <span>18:25 - 19:10</span>
+                    <span>14:05 - 14:50</span>
                 </div>
             </div>
-
+            <div class="ringBox break">
+                <div class="ringTime">
+                    <span>Перерыв</span>
+                    <span>14:50 - 15:30</span>
+                </div>
+            </div>
+            <div class="ringBox">
+                <div class="ringCounter">2</div>
+                <div class="ringTime">
+                    <span>15:30 - 16:15</span>
+                </div>
+            </div>
+            <div class="ringBox">
+                <div class="ringCounter">4</div>
+                <div class="ringTime">
+                    <span>16:25 - 17:10</span>
+                    <span>17:15 - 18:00</span>
+                </div>
+            </div>
         </div>
     </div>
     <div class="ringPartContainer">
